data/src/main/java/com/example/data/network/error/ForbiddenException.kt
package com.example.data.network.error

class ForbiddenException: RuntimeException()